share/css/backoffice.css
/* ... */
div.onyx-messages p {margin: 5px 0; line-height: 1; padding: 0; color: white; font-weight: bold; }
div.onyx-messages p.onyx-error-msg {background: transparent url(/share/images/icons/exclamation.png) left top no-repeat; padding: 0 0 0 25px;}

.error-message {
  color: var(--onyx-color-danger);
  padding: 10px;
  width: 100%;
  background-color: #fbeaea;
  border-radius: 5px;
  margin-bottom: 10px;
}

/*
* jGrowl
*/

div#jGrowl { position: fixed; top: 50px; width: 500px; left: 50%; margin-left: -250px; text-align: center; pointer-events: none; z-index: 999999; -webkit-transform: translateZ(1px); transform: translateZ(1px);}
div#jGrowl div.onyx-messages { margin: 0; padding: 10px 30px; }
div#jGrowl div.jGrowl-notification { display: block; position: relative; z-index: 9999; zoom: 1; text-align: left; pointer-events: all; border: none; background: none;}
div#jGrowl div.jGrowl-notification.ui-state-highlight { margin: 0 auto 20px auto; display: inline-block; min-width: 260px; }
div#jGrowl div.jGrowl-notification p { text-align: left; }
div#jGrowl button.jGrowl-close { display: none; position: absolute; right: 5px; top: 5px; color: #ffffff; cursor: pointer; z-index: 10000; font-weight: bold; line-height: 16px; }
div#jGrowl div.jGrowl-closer { background: black; color: white; background: rgba(0,0,0,0.75); width: 100px; margin: 10px auto; border: none; cursor: pointer; text-align: center; pointer-events: all; }
@media all and (max-width: 600px) {
    div#jGrowl { width: 80%; left: 10%; margin-left: 0; }
}

/*
* Tracy
*/
  
#tracy-debug {z-index: 300000;}
#tracy-debug img {width: auto;}
@media all and (max-width: 600px) {
    #tracy-debug {display: none!important;}
}

/*
* Loading
*/ 

div.htmx-request, dialog.htmx-request, ul.htmx-request {
  position: relative;
  margin-top: 30px;

  &:before {
    content: '';
    position: absolute;
    top: 0; left: 0; right: 0; bottom: 0;
    background: white;
    background-size: contain;
    z-index: 998;
    animation: fadeIn 0.3s ease forwards;
  }

  &:after {
    content: '';
    position: absolute;
    left: calc(50% - 5px);
    top: calc(50% - 5px);
    background: var(--onyx-color-primary);
    z-index: 999;
    width: 10px;
    aspect-ratio: 1;
    border-radius: 50%;
    animation: loading 1s infinite linear alternate;
  }
}

@keyframes loading {
  0%  {
    box-shadow: 
      20px 0 var(--onyx-color-background-light), 
      -20px 0 var(--onyx-color-primary);
    background: var(--onyx-color-background-light); 
  }

  33% {
    box-shadow: 
      20px 0 var(--onyx-color-background-light), 
      -20px 0 var(--onyx-color-primary);
    background: var(--onyx-color-primary);
  }

  66% {
    box-shadow: 
      20px 0 var(--onyx-color-primary), 
      -20px 0 var(--onyx-color-background-light);
    background: var(--onyx-color-primary);
  }
  100% {
    box-shadow: 
      20px 0 var(--onyx-color-primary), 
      -20px 0 var(--onyx-color-background-light);
    background: var(--onyx-color-background-light);
  }
}

@keyframes fadeIn {
  from {opacity: 0;}
  to {opacity: 0.7;}
}


/*
* Backoffice layout
*/

#backoffice {
  height: 100%;
  width: auto; 
  margin: 0 auto;

  .page-content-wrapper, 
  .page-header-wrapper {
    padding-left: 0; margin-left: 0;
  }
}

#onyx-backoffice {
  margin-left: 130px; 
  height: 100%; 
  width: calc(100% - 130px);
}

div.wrapper {
  margin: 0 10px;
}

.bo-page {
  display: flex;
  position: relative;
  width: 100%;
  height: 100%;
}

.bo-navigation-wrapper {
  display: flex;
  flex-direction: column;
  position: relative;
  width: auto;
  max-width: 50%;
  height: 100%;
  transition: 0.3s ease;
}

.bo-node-detail-wrapper {
  height: 100%;
  width: 100%;
  min-width: 50%;
  padding: 0 10px;
  border-left: 2px solid var(--onyx-color-primary);
  position: relative;
}

/*
* onyxHeader
*/
 
#onyx-header { position: fixed; z-index: 3000; left: 0; top: 0; width: 130px; height: 100%; background: #2a2f34; box-shadow: inset -3px 0 15px rgba(0,0,0,0.2), 1px 0 3px rgba(0,0,0,0.2); overflow: hidden;}
#onyx-header a { line-height: 17px; font-family: "Lucida Grande", Helvetica, Arial, sans-serif;  color: #ccc;}

#onyx-menu-bar ul { margin: 0; padding: 10px 0; list-style: none; text-shadow: 1px 1px 1px rgba(0,0,0,0.5); border-top: 1px solid #33373c; box-shadow: 0 -1px 0 #0f1112; }
#onyx-menu-bar ul li { margin: 0; padding: 0; width: 130px; white-space: nowrap;}
#onyx-menu-bar ul li a { text-decoration: none; display: flex; width: 130px; height: 28px; line-height: 24px; transition: color 200ms linear; align-items: center; }
#onyx-menu-bar ul li.active a { color: #fff; margin-top: 0; border-top: 1px solid #6d97d0; background-image: -webkit-linear-gradient(top, #5685c4, #4c6cb8); background-image: -moz-linear-gradient(top, #5685c4, #4c6cb8); background-image: -ms-linear-gradient(top, #5685c4, #4c6cb8); background-image: -o-linear-gradient(top, #5685c4, #4c6cb8); background-image: linear-gradient(to bottom, #5685c4, #4c6cb8); }
#onyx-menu-bar ul li a:hover { color: #fff !important; }

#onyx-menu-bar ul#menu-system { padding: 10px 0 13px 0; }
#menu-system li.onyx-version a {color: white; height: auto; line-height: 1.2;}
div.backoffice-menu { position: relative; }
ul#menu-advanced { position: absolute; top: 0; left: 130px; }

/*
* fe edit
*/
 
div.onyx-highlight-delete {background: #ffbfbf;}
div.onyx-highlight-edit {background: #bfffbf;}

/*
* Display permission highlights
*/
 
div.node.show-at-normal-login {border: 1px solid red;}
div.node.hide-at-normal-login {border: 1px solid green;}
div.node.show-at-trade-login {border: 1px solid red;}
div.node.hide-at-trade-login {border: 1px solid green;}

/*
* Product variety list
*/
 
a.button.add-new-variety {float: left; margin-right: 10px;}

/*
* divider
*/
 
div.divider {border-top: 2px solid #dadada;}

/*
* jQuery UI
*/
 
div.ui-dialog legend {display: none;}
.ui-widget-overlay {background: #000; opacity: 0.7; /*needs to be higher than .onyx-modal-overlay*/}
/* ... */

